<resources>
    <string name="check_to_pass">I accept terms and conditions.</string>
    <string name="error_message">Please accept terms and conditions first.</string>
    <string name="launch_intro_activity">Launch intro activity</string>
    <string name="lorem_ipsum">Lorem ipsum \n\ndolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur? But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful. Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but because occasionally circumstances occur in which toil and pain can procure him some great pleasure. To take a trivial example, which of us ever undertakes laborious physical exercise, except to obtain some advantage from it? But who has any right to find fault with a man who chooses to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no resultant pleasure</string>
    <string name="navigation_item_1">Home</string>
    <string name="navigation_item_2">Events</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_phone">Phone Number Is Not Valid</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="starred_string">Starred</string>
    <string name="inbox_string">Inbox</string>
    <string name="sent_mail_string">Sent mail</string>
    <string name="draft_string">Drafts</string>
    <string name="subheader">Subheader</string>
    <string name="trash_string">Trash</string>
    <string name="all_mail_string">All mails</string>
    <string name="spam_string">Spams</string>
    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>
    <string name="app_name" translatable="false">FunShopper</string>
    <string name="nav_drawer_open">open drawer</string>
    <string name="nav_drawer_close">close drawer</string>
    <string name="refresh">Refresh</string>
    <string name="find">Find</string>
    <string name="share_via">Share via</string>
    <string name="copy_link">Copy Link</string>
    <string name="open_with">Open with</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="dialog_action_ok">OK</string>
    <string name="dialog_action_delete">Delete</string>
    <string name="dialog_action_cancel">Cancel</string>
    <string name="dialog_action_exit">Exit</string>
    <string name="dialog_error_title">Error</string>
    <string name="dialog_error_functionality_limited">Functionality limited</string>
    <string name="error_message_location_access_not_granted">\"Since location access has not been granted, this app will not be able to discover beacons when in the background.</string>
    <string name="dialog_error_need_location_access">This app needs location access</string>
    <string name="error_message_location_access_need_tobe_granted">Please grant location access so this app can detect beacons in the background.</string>
    <string name="dialog_error_ble_not_enabled">Bluetooth not enabled</string>
    <string name="error_message_please_enable_bluetooth">Please enable bluetooth in settings and restart this application.</string>
    <string name="dialog_error_ble_not_supported">Bluetooth LE not available</string>
    <string name="error_message_bluetooth_le_not_supported">Sorry, this device does not support Bluetooth LE.</string>
    <string name="pref_title_background_scan">Enable background scan</string>
    <string name="pref_description_background_scan">Enables to run scanning in background and trigger actions.</string>
    <string name="pref_title_background_scan_timeout">Background scan interval (only Android 4.X)</string>
    <string name="pref_title_region_name">Region name</string>
    <string name="pref_default_region_name">Default</string>
    <string name="pref_title_manual_scan_timeout">Manual scan interval</string>
    <string name="pref_title_scan_sorting">Sorting mode</string>
    <string name="pref_title_scan_layout_category" translatable="false">Scan Layouts</string>
    <string name="pref_scan_parser_layout_eddystone_uid">Eddystone UID</string>
    <string name="pref_scan_parser_layout_eddystone_url">Eddystone URL</string>
    <string name="pref_scan_parser_layout_eddystone_tlm">Eddystone TLM</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_use_notifications">Use notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_header_scanner">Scan</string>
    <string name="pref_header_actions">Action</string>
    <string name="title_activity_main_navigation">Beacon Locator</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_beacon">Beacon Action</string>
    <string name="action_settings">Settings</string>
    <string name="action_view_on_github">GitHub</string>
    <string name="action_donate">Donate</string>
    <string name="action_help">Help</string>
    <string name="action_detected_beacon_add">Manage</string>
    <string name="action_detected_beacon_add_filter">Add To Filter</string>
    <string name="action_tracked_list_delete">Delete</string>
    <string name="action_tracked_action_add">Add Event Action</string>
    <string name="title_action_group_beacon_manage">Beacons</string>
    <string name="action_scan_around">Scan</string>
    <string name="action_scan_managed">Radar</string>
    <string name="action_tracked_list">Manage</string>
    <string name="mv_text_rssi" translatable="false">RSSI</string>
    <string name="mv_text_rssi_unit">dBm</string>
    <string name="mv_text_txpower" translatable="false">TX</string>
    <string name="mv_text_distance_unit">m</string>
    <string name="mv_text_uuid" translatable="false">UUID</string>
    <string name="mv_text_major" translatable="false">Major</string>
    <string name="mv_text_minor" translatable="false">Minor</string>
    <string name="mv_text_distance">Distance</string>
    <string name="mv_text_vendor">Vendor</string>
    <string name="mv_text_name">Bluetooth Name</string>
    <string name="mv_text_url" translatable="false">URL</string>
    <string name="mv_text_instance" translatable="false">Instance</string>
    <string name="mv_text_namespace" translatable="false">Namespace</string>
    <string name="title_fragment_radar_beacons">Beacon Radar</string>
    <string name="text_scanning">Scanning...</string>
    <string name="text_scanner_found_beacons_size">%1$d found</string>
    <string name="title_fragment_detected_beacons">Beacon Scanner</string>
    <string name="text_empty_list">No Data</string>
    <string name="text_scan_not_found">No beacon found in your neighborhood</string>
    <string name="text_please_start_scan">Press scan button for detecting beacons</string>
    <string name="title_fragment_tracked_beacons">Beacon List</string>
    <string name="text_empty_list_tracked_beacons">No tracked beacons. Go to scan</string>
    <string name="tab_title_beacon_info">Info</string>
    <string name="tab_title_beacon_event">Event</string>
    <string name="tab_title_beacon_action">Action</string>
    <string name="tab_title_beacon_notification">Notification</string>
    <string name="pref_bd_name_category">Name and Enable watched beacon</string>
    <string name="pref_bd_switch_active">Enable it</string>
    <string name="pref_bd_summary_switch_active">Enables action for the beacon</string>
    <string name="pref_bd_name">Region Name</string>
    <string name="pref_bd_default_name">Default action name</string>
    <string name="pref_bd_uuid" translatable="false">UUID</string>
    <string name="pref_bd_type">Type</string>
    <string name="pref_bd_rssi" translatable="false">RSSI</string>
    <string name="pref_bd_txpower">Tx Power</string>
    <string name="pref_bd_bluetooth_name">Bluetooth Name</string>
    <string name="pref_bd_bluetooth_address">Bluetooth Address</string>
    <string name="pref_bd_distance">Distance</string>
    <string name="pref_bd_major" translatable="false">Major</string>
    <string name="pref_bd_minor" translatable="false">Minor</string>
    <string name="pref_be_event_category">Select type of event</string>
    <string name="pref_be_event_range">Event range</string>
    <string name="pref_be_summary_event_range">Defined event for triggering actions</string>
    <string name="pref_be_event_enter_region">Enter region (in range)</string>
    <string name="pref_be_summary_event_enter_region">Occurs when beacon is entering region</string>
    <string name="pref_be_event_leave_region">Leave region (out of range)</string>
    <string name="pref_be_summary_event_leave_region">Occurs when beacon is going out of range</string>
    <string name="pref_be_event_near">Beacon near you</string>
    <string name="pref_be_summary_event_near">Occurs when beacon is close to you</string>
    <string name="pref_ba_action_category">Select action and set param</string>
    <string name="pref_ba_action_param1">Action parameter</string>
    <string name="pref_ba_action_selection">Action Type</string>
    <string name="pref_ba_action_test_category">Test your action</string>
    <string name="pref_ba_action_test_button">Execute</string>
    <string name="pref_bn_notification_category">Enable alarm notification</string>
    <string name="pref_bn_notification_action">Notification</string>
    <string name="pref_bn_notification_action_message">Message</string>
    <string name="pref_bn_default_notification_action_message">Default Message (Replace with yours)</string>
    <string name="pref_bn_notification_action_ringtone">Ring tone</string>
    <string name="pref_bn_none_notification_action_ringtone">None (Silent)</string>
    <string name="fashion">Fashion</string>
    <string name="food">Food</string>
    <string name="see">See All</string>
    <string name="lifestyle">LifeStyle</string>
</resources>