<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusableInTouchMode="true"
            android:orientation="vertical">
            <com.daimajia.slider.library.SliderLayout
                android:id="@+id/view_pager"
                android:layout_weight="1"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_width="match_parent"
                android:background="@color/white"
                android:layout_height="180dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fashion"
                        android:textSize="20dp"
                        android:textColor="@color/black"
                        android:background="@android:color/transparent"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"/>
                    <Button
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/fashionsee"
                        android:text="@string/see"
                        android:background="@android:color/transparent"
                        android:textColor="@color/black"
                        android:gravity="right"/>
                </LinearLayout>
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/fashiongrid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/food"
                        android:textSize="20dp"
                        android:textColor="#000000"
                        android:background="@android:color/transparent"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"/>
                    <Button
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/foodsee"
                        android:text="@string/see"
                        android:background="@android:color/transparent"
                        android:textColor="#000000"
                        android:gravity="right"/>
                </LinearLayout>
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/foodgrid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                 >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lifestyle"
                        android:textSize="20dp"
                        android:textColor="@color/black"
                        android:background="@android:color/transparent"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"/>
                    <Button
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/lifestylesee"
                        android:text="@string/see"
                        android:background="@android:color/transparent"
                        android:textColor="@color/black"
                        android:gravity="right"/>
                </LinearLayout>
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/lifestylegrid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Popular"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        android:textColor="#000000"
                        android:background="@android:color/transparent"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"/>
                </LinearLayout>
                <include layout="@layout/popular"/>



        </LinearLayout>
</LinearLayout>
    </ScrollView>
</RelativeLayout>
